Fix alignment of top menu.

--- a/waltzwebsite/static/assets/stylesheets/main.css
+++ b/waltzwebsite/static/assets/stylesheets/main.css
@@ -121,6 +121,7 @@ h3 {
 /* #nav bar */
 #nav {
     margin: 5px 0;
+    width: 95%;
 }
 
 ul {
